# marvelous-databricks-course-benitomartin

./: .gitattributes  .gitattributes   .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  bundle_monitoring.yml  databricks.yml  main.py  project_config.yml  pyproject.toml  pytest.ini  see_tables.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
data/: data.csv:Zone.Identifier
mlruns/0/: meta.yaml
mlruns/0/66a2561b59134ba0abc71c020c72bf18/: meta.yaml
mlruns/0/66a2561b59134ba0abc71c020c72bf18/metrics/: accuracy
mlruns/0/66a2561b59134ba0abc71c020c72bf18/tags/: mlflow.databricks.cluster.id  mlflow.runName  mlflow.source.git.commit
mlruns/0/78b488039b3448c99c35fe768f199061/: meta.yaml
mlruns/0/78b488039b3448c99c35fe768f199061/metrics/: accuracy
mlruns/0/78b488039b3448c99c35fe768f199061/tags/: mlflow.runName  mlflow.source.name
notebooks/: basic_mlflow_experiment_notebook.py  combined_mlflow_experiment_notebook.py  custom_mlflow_experiment_notebook.py  fe_mlflow_experiment_notebook.py  prepare_data_notebook.py  preprocessing_clean.ipynb  preprocessing_raw.ipynb
notebooks/create_source_data/: create_source_data_notebook.py
notebooks/exploration/: preprocessing_clean.ipynb  preprocessing_raw.ipynb
notebooks/feature_engineering/: basic_mlflow_experiment_notebook.py  combined_mlflow_experiment_notebook.py  custom_mlflow_experiment_notebook.py  fe_mlflow_experiment_notebook.py  feature_mlflow_experiment_notebook.py  model_version.json  prepare_data_notebook.py
notebooks/feature_engineering/mlruns/0/: meta.yaml
notebooks/model_feature_serving/: AB_test_model_serving_notebbok.py  feature_serving_notebook.py  model_serving_feat_lookup_notebook.py  model_serving_notebook.py
notebooks/monitoring/: create_alert.py  create_inference_data.py  lakehouse_monitoring.py  refresh_monitor_notebook.py  send_request_to_endpoint.py
notebooks/test_scripts/: combined_feature.py  create_feature_table.py
src/credit_default/: data_cleaning.py  data_cleaning_spark.py  data_preprocessing.py  data_preprocessing_spark.py  model_training.py  utils.py
src/ml_flow/: mlflow_example.py  prepare_data.py  tempCodeRunnerFile.py
tests/: test_cleaning.py  test_data_cleaning.py  test_data_preprocessor.py
workflows/: deploy_model.py  evaluate_model.py  preprocess.py  refresh_monitor.py  train_model.py
